# internal/handlers/projects_delete.go
@@ -63,7 +63,6 @@ func (h *BaseHandler) ProjectDelete(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	payload := NewResponsePayload(fmt.Sprintf("project ID %d successfuly deleted", projectID), nil)
-	_ = WriteResponse(w, http.StatusOK, payload)
+	_ = WriteResponse(w, http.StatusOK, NewResponsePayload(fmt.Sprintf("project ID %d successfuly deleted", projectID), nil))
 	return
 }
